syntax = "proto3";

package aifs;

service AifsService {
  // List objects in a namespace or directory
  rpc ListObjects(ListObjectsRequest) returns (ListObjectsResponse);
  
  // Get object metadata
  rpc GetObjectMetadata(GetObjectMetadataRequest) returns (ObjectMetadata);
  
  // Create a directory
  rpc CreateDirectory(CreateDirectoryRequest) returns (CreateDirectoryResponse);
  
  // Upload an object
  rpc UploadObject(stream UploadObjectRequest) returns (ObjectMetadata);
  
  // Download an object
  rpc DownloadObject(DownloadObjectRequest) returns (stream DownloadObjectResponse);
  
  // Delete an object
  rpc DeleteObject(DeleteObjectRequest) returns (DeleteObjectResponse);
  
  // Copy an object
  rpc CopyObject(CopyObjectRequest) returns (ObjectMetadata);
  
  // Move an object
  rpc MoveObject(MoveObjectRequest) returns (ObjectMetadata);
  
  // Check if an object exists
  rpc ObjectExists(ObjectExistsRequest) returns (ObjectExistsResponse);
  
  // Semantic search
  rpc SemanticSearch(SemanticSearchRequest) returns (ListObjectsResponse);
}

message ListObjectsRequest {
  string namespace = 1;
  string prefix = 2;
  string delimiter = 3;
  int32 page_size = 4;
  string page_token = 5;
  string semantic_query = 6;
}

message ListObjectsResponse {
  repeated ObjectMetadata items = 1;
  string next_page_token = 2;
}

message GetObjectMetadataRequest {
  string namespace = 1;
  string path = 2;
}

message CreateDirectoryRequest {
  string namespace = 1;
  string path = 2;
  bool recursive = 3;
}

message CreateDirectoryResponse {
  bool success = 1;
  string message = 2;
}

message UploadObjectRequest {
  message Metadata {
    string namespace = 1;
    string path = 2;
    string content_type = 3;
    map<string, string> metadata = 4;
    repeated string semantic_tags = 5;
    repeated float embedding = 6;
    repeated string parents = 7;
  }
  
  oneof data {
    Metadata metadata = 1;
    bytes chunk = 2;
  }
}

message DownloadObjectRequest {
  string namespace = 1;
  string path = 2;
}

message DownloadObjectResponse {
  oneof data {
    ObjectMetadata metadata = 1;
    bytes chunk = 2;
  }
}

message DeleteObjectRequest {
  string namespace = 1;
  string path = 2;
  bool recursive = 3;
}

message DeleteObjectResponse {
  bool success = 1;
  string message = 2;
}

message CopyObjectRequest {
  string source_namespace = 1;
  string source_path = 2;
  string destination_namespace = 3;
  string destination_path = 4;
}

message MoveObjectRequest {
  string source_namespace = 1;
  string source_path = 2;
  string destination_namespace = 3;
  string destination_path = 4;
}

message ObjectExistsRequest {
  string namespace = 1;
  string path = 2;
}

message ObjectExistsResponse {
  bool exists = 1;
}

message SemanticSearchRequest {
  string namespace = 1;
  string query = 2;
  int32 limit = 3;
}

message ObjectMetadata {
  string name = 1;
  string path = 2;
  int64 size = 3;
  string last_modified = 4;
  string etag = 5;
  string checksum = 6;
  bool is_dir = 7;
  
  message Metadata {
    string content_type = 1;
    repeated string semantic_tags = 2;
    repeated float embedding = 3;
  }
  
  message Lineage {
    repeated string parents = 1;
    repeated string children = 2;
  }
  
  message Snapshot {
    string id = 1;
    string name = 2;
    string description = 3;
    string created_at = 4;
  }
  
  Metadata metadata = 8;
  Lineage lineage = 9;
  Snapshot snapshot = 10;
}